--- a/index.html
+++ b/index.html
@@ -10,18 +10,16 @@
 </head>
 <body>
     <header class="header">
-        <div class="header-container">
+        <div class="container">
             <div class="logo-wrap">
             <img src="logo.jpg" alt="logo" class="logo">
-            </div>    
-            <ul class="nav">
-                    <label for="Choose your city from list">Weather in city</label>
-                    <select name="city-select" id="32167" class="city-select">
-                    </select>
-                    <li class="nav__item">Contacts</li>
-                    <li class="nav__item">About</li>
-                </ul>
-        </div>
+            </div>
+            <div class="city-select">
+                <p class="city-select__text">Choose your city:</p>
+                <div id="city" class="city-select__custom-select">Default
+                </div>
+            </div>
+           </div>
     </header>
     <main class="main">
         <div class="main-container">
