Fetch is already working

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             </div>
             <div class="city-select">
                 <p class="city-select__text">Choose your city:</p>
-                <div id="city" class="city-select__custom-select">Default
+                <div id="city" class="city-select__custom-select">
+                    Click on me!
                 </div>
             </div>
            </div>
