Playing with position absolute for city-option-wrap

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             </div>
             <ul class="weather-list">
-                <li class="weather-list__item feels-like"></li>
+                <li class="weather-list__item feels-like">Feels-like</li>
                 <li class="weather-list__item max-t">Max t: </li>
                 <li class="weather-list__item min-t">Min t:</li>
                 <li class="weather-list__item pressure">Pressure</li>
